# J2

./: .gitignore  CMakeLists.txt  main.cpp
resources/: bulletina-xxxvii-044.csv  coordinates_result.hpp  dut.csv  sorce_tsi_L3_c24h_latest copy.txt  sorce_tsi_L3_c24h_latest.txt  time_2019_2020_result.hpp  trimmed.csv
src/: CMakeLists.txt
src/Kozai/: transformations.hpp  transformations_Kozai.hpp  transformations_YoshihideKozai.hpp  transformations_deltas.hpp
src/celestial_mechanics/: AccelerationCalculator.hpp  Exception.cpp  Exception.hpp  Interpolation.hpp
src/celestial_mechanics/coordinates/: EOPContainer.cpp  EOPContainer.hpp  ReferenceSystemConverter.hpp
src/celestial_mechanics/forces/: AtmosphericDrag.hpp  EarthGravity.cpp  EarthGravity.hpp  Eternal.cpp  Eternal.hpp  GOST4401_81.hpp  SolarRadiationPressure.cpp  SolarRadiationPressure.hpp
src/celestial_mechanics/integration/: Integrator.hpp  RHS.hpp  Tableau.hpp
src/celestial_mechanics/orbital_elements/: AnomalyConverter.cpp  AnomalyConverter.hpp  Elements.hpp  ElementsConverter.cpp  ElementsConverter.hpp  Propagator.cpp  (+1 more)
src/semi-analytical/: osculatingDelaunay.cpp  osculatingDelaunay.hpp  second_order.cpp  second_order.hpp  transformations.cpp  transformations.hpp
tests/: CMakeLists.txt  Paths.hpp
tests/Kozai/: test_transformations_Kozai.cpp
tests/coordinates/: test_6.cpp
tests/forces/: test_7.cpp
tests/orbital_elements/: test_10.cpp  test_8.cpp  test_9.cpp
tests/semi-analytical/: test_transformations.cpp
tests/time/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp
(+8 files in other folders)
